--- a/src/public/js/components/quiz/hard_mode/answer_confirm_wrapper/answer_field/answer_input/answer_input.css
+++ b/src/public/js/components/quiz/hard_mode/answer_confirm_wrapper/answer_field/answer_input/answer_input.css
@@ -1,9 +1,3 @@
-.answer_input_wrapper {
-  display: flex;
-  place-content: center;
-  font-family: var(--secondary-text-font);
-}
-
 .answer_input {
   padding: 0.5em;
   margin: 0em 1em;
