--- a/src/public/js/components/quiz/hard_mode/answer_confirm_wrapper/answer_field/correct_answer/correct_answer.css
+++ b/src/public/js/components/quiz/hard_mode/answer_confirm_wrapper/answer_field/correct_answer/correct_answer.css
@@ -1,9 +1,3 @@
-.correct_answer_wrapper {
-  display: flex;
-  margin-left: 4.8em;
-  position: relative;
-}
-
 .correct_answer_text {
   padding: 0.6em;
   margin: 0.5em 1em;
